kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie
spec:
  type: LoadBalancer
  selector:
    app: movie
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
