kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authentication-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
spec:
  hosts:
  - "*"
  gateways:
  - authentication-gateway
  http:
  - match:
    route:
    - destination:
        host: authentication
        port:
          number: 8080
